--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
         </nav>
       </header>
     </div>
-
+    <section id="create-and-share">
+      <div class="text-dark">
+        <div class="home-page-text">
+          <h2>CREATE AND SHARE YOUR PHOTO STORIES.</h2>
+          <p>
+            Photosnap is a platform for photographers and visual storytellers.
+            We make it easy to share photos, tell stories and connect with
+            others.
+          </p>
+          <div class="get-an-invite-text-link">
+            <a href="#"
+              >GET AN INVITE
+              <img class="arrow-img" src="./img/arrow.svg" alt="arrow" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="dock-man-img"></div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
