section 2 home complete

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             We make it easy to share photos, tell stories and connect with
             others.
           </p>
-          <div class="get-an-invite-text-link">
+          <div class="get-an-invite-text-link-dark">
             <a href="#"
               >GET AN INVITE
               <img class="arrow-img" src="./img/arrow.svg" alt="arrow" />
@@ -62,6 +62,25 @@
         </div>
       </div>
       <div class="dock-man-img"></div>
+    </section>
+    <section id="beautiful-stories">
+      <div class="laptop-img"></div>
+      <div class="text-light">
+        <div class="home-page-text">
+          <h2>BEAUTIFUL STORIES EVERY TIME</h2>
+          <p>
+            We provide design templates to ensure your stories look terrific.
+            Easily add photos, text, embed maps and media from other networks.
+            Then share your story with everyone.
+          </p>
+          <div class="get-an-invite-text-link">
+            <a href="#"
+              >GET AN INVITE
+              <img class="arrow-img" src="./img/arrow-dark.svg" alt="arrow" />
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="script.js"></script>
   </body>
