--- a/index.html
+++ b/index.html
@@ -82,6 +82,25 @@
         </div>
       </div>
     </section>
+    <section id="designed-for-everyone">
+      <div class="text-light">
+        <div class="home-page-text">
+          <h2>DESIGNED FOR EVERYONE</h2>
+          <p>
+            Photosnap can help you create stories that resonate with your
+            audience. Our tool is designed for photographers of all levels,
+            brands, businesses you name it.
+          </p>
+          <div class="get-an-invite-text-link">
+            <a href="#"
+              >GET AN INVITE
+              <img class="arrow-img" src="./img/arrow-dark.svg" alt="arrow" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="camera-img"></div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
