--- a/index.html
+++ b/index.html
@@ -101,6 +101,76 @@
       </div>
       <div class="camera-img"></div>
     </section>
+    <section id="stories">
+      <div id="mountain-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">The Mountains</h3>
+          <p class="story-author">by John Appleseed</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="sunset-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Sunset Cityscapes</h3>
+          <p class="story-author">by Benjamin Cruz</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="voyage-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">18 Days Voyage</h3>
+          <p class="story-author">by Alexei Borodin</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="architect-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Architecturals</h3>
+          <p class="story-author">by Samantha Brooke</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
