home features complete

--- a/index.html
+++ b/index.html
@@ -171,6 +171,44 @@
         </div>
       </div>
     </section>
+    <section id="home-features">
+      <div class="home-feature">
+        <div class="home-feature-img">
+          <img src="./img/responsive.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>100% Responsive</h3>
+          <p>
+            No matter which the device you’re on, our site is fully responsive
+            and stories look beautiful on any screen.
+          </p>
+        </div>
+      </div>
+      <div class="home-feature middle-home-feature">
+        <div class="home-feature-img">
+          <img src="./img/no-limit.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>No Photo Upload Limit</h3>
+          <p>
+            Our tool has no limits on uploads or bandwidth. Freely upload in
+            bulk and share all of your stories in one go.
+          </p>
+        </div>
+      </div>
+      <div class="home-feature">
+        <div class="home-feature-img">
+          <img src="./img/embed.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>Available to Embed</h3>
+          <p>
+            Embed Tweets, Facebook posts, Instagram media, Vimeo or YouTube
+            videos, Google Maps, and more.
+          </p>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
