--- a/index.html
+++ b/index.html
@@ -209,6 +209,42 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footer-logo-socials-container">
+        <ul class="social-links">
+          <li>
+            <a href="#"><img src="./img/facebook.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/youtube.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/twitter.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/pinterest.svg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/instagram.svg" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+      <ul class="footer-nav">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">STORIES</a></li>
+        <li><a href="#">FEATURES</a></li>
+        <li><a href="#">PRICING</a></li>
+      </ul>
+      <div class="footer-invite-footer-copyright">
+        <div class="get-an-invite-container">
+          <a href="#"
+            >GET AN INVITE
+            <img class="footer-arrow" src="./img/arrow.svg" alt="" />
+          </a>
+        </div>
+        <p>Copyright 2022. All Rights Reserved</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
