--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
       <header>
         <nav>
           <div class="logo">
-            <img src="./img/logo.svg" alt="photo snap logo" />
+            <a href="index.html">
+              <img src="./img/logo.svg" alt="photo snap logo" />
+            </a>
           </div>
           <ul class="nav-menu">
-            <li><a href="#">STORIES</a></li>
+            <li><a href="stories.html">STORIES</a></li>
             <li><a href="#">FEATURES</a></li>
             <li><a href="#">PRICING</a></li>
             <li><a class="mobile-nav-btn" href="#">GET AN INVITE</a></li>
@@ -230,8 +232,8 @@
         </ul>
       </div>
       <ul class="footer-nav">
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">STORIES</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="stories.html">STORIES</a></li>
         <li><a href="#">FEATURES</a></li>
         <li><a href="#">PRICING</a></li>
       </ul>
