stories page complete

--- a/stories.html
+++ b/stories.html
@@ -91,7 +91,280 @@
         </div>
       </div>
     </div>
-
+    <section id="stories">
+      <div id="mountain-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">The Mountains</h3>
+          <p class="story-author">by John Appleseed</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="sunset-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Sunset Cityscapes</h3>
+          <p class="story-author">by Benjamin Cruz</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="voyage-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">18 Days Voyage</h3>
+          <p class="story-author">by Alexei Borodin</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="architect-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Architecturals</h3>
+          <p class="story-author">by Samantha Brooke</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="world-tour-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">World Tour 2019</h3>
+          <p class="story-author">by Timothy Wagner</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="unforseen-corners-story" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Unforeseen Corners</h3>
+          <p class="story-author">by William Malcolm</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="king-of-africa" class="story">
+        <div class="story-description">
+          <h3 class="story-title">King on Africa: Part II</h3>
+          <p class="story-author">by Tim Hillenburg</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="trip-to-nowhere" class="story">
+        <div class="story-description">
+          <h3 class="story-title">The Trip to Nowhere</h3>
+          <p class="story-author">by Felicia Rourke</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="rage-of-the-sea" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Rage of The Sea</h3>
+          <p class="story-author">by Mohammed Abdul</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="running-free" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Running Free</h3>
+          <p class="story-author">by Michelle</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="behind-the-waves" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Behind the Waves</h3>
+          <p class="story-author">by Lamarr Wilson</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="calm-waters" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Calm Waters</h3>
+          <p class="story-author">by Samantha Brooke</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="the-milky-way" class="story">
+        <div class="story-description">
+          <h3 class="story-title">The Milky Way</h3>
+          <p class="story-author">by Benjamin Cruz</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="dark-forest" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Night at the Dark Forest</h3>
+          <p class="story-author">by Mohammed Abdul</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="beauty" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Somwarpet’s Beauty</h3>
+          <p class="story-author">by Michelle</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="land-of-dreams" class="story">
+        <div class="story-description">
+          <h3 class="story-title">Land of Dreams</h3>
+          <p class="story-author">by William Malcolm</p>
+        </div>
+        <div class="gray-line"></div>
+        <div class="read-story-link">
+          <div>
+            <a class="story-link" href="#">READ STORY</a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="./img/arrow.svg" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="footer-logo-socials-container">
         <ul class="social-links">
