features halfway done

--- a/stories.html
+++ b/stories.html
@@ -34,7 +34,7 @@
           </div>
           <ul class="nav-menu">
             <li><a href="stories.html">STORIES</a></li>
-            <li><a href="#">FEATURES</a></li>
+            <li><a href="features.html">FEATURES</a></li>
             <li><a href="#">PRICING</a></li>
             <li><a class="mobile-nav-btn" href="#">GET AN INVITE</a></li>
           </ul>
@@ -388,7 +388,7 @@
       <ul class="footer-nav">
         <li><a href="index.html">HOME</a></li>
         <li><a href="stories.html">STORIES</a></li>
-        <li><a href="#">FEATURES</a></li>
+        <li><a href="features.html">FEATURES</a></li>
         <li><a href="#">PRICING</a></li>
       </ul>
       <div class="footer-invite-footer-copyright">
