--- a/features.html
+++ b/features.html
@@ -49,129 +49,15 @@
     <section id="create-and-share">
       <div class="text-dark">
         <div class="home-page-text">
-          <h2>CREATE AND SHARE YOUR PHOTO STORIES.</h2>
+          <h2>FEATURES</h2>
           <p>
-            Photosnap is a platform for photographers and visual storytellers.
-            We make it easy to share photos, tell stories and connect with
-            others.
+            We make sure all of our features are designed to be loved by every
+            aspiring and even professional photograpers who wanted to share
+            their stories.
           </p>
-          <div class="get-an-invite-text-link-dark">
-            <a href="#"
-              >GET AN INVITE
-              <img class="arrow-img" src="./img/arrow.svg" alt="arrow" />
-            </a>
-          </div>
         </div>
       </div>
-      <div class="dock-man-img"></div>
-    </section>
-    <section id="beautiful-stories">
-      <div class="laptop-img"></div>
-      <div class="text-light">
-        <div class="home-page-text">
-          <h2>BEAUTIFUL STORIES EVERY TIME</h2>
-          <p>
-            We provide design templates to ensure your stories look terrific.
-            Easily add photos, text, embed maps and media from other networks.
-            Then share your story with everyone.
-          </p>
-          <div class="get-an-invite-text-link">
-            <a href="#"
-              >GET AN INVITE
-              <img class="arrow-img" src="./img/arrow-dark.svg" alt="arrow" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="designed-for-everyone">
-      <div class="text-light">
-        <div class="home-page-text">
-          <h2>DESIGNED FOR EVERYONE</h2>
-          <p>
-            Photosnap can help you create stories that resonate with your
-            audience. Our tool is designed for photographers of all levels,
-            brands, businesses you name it.
-          </p>
-          <div class="get-an-invite-text-link">
-            <a href="#"
-              >GET AN INVITE
-              <img class="arrow-img" src="./img/arrow-dark.svg" alt="arrow" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="camera-img"></div>
-    </section>
-    <section id="stories">
-      <div id="mountain-story" class="story">
-        <div class="story-description">
-          <h3 class="story-title">The Mountains</h3>
-          <p class="story-author">by John Appleseed</p>
-        </div>
-        <div class="gray-line"></div>
-        <div class="read-story-link">
-          <div>
-            <a class="story-link" href="#">READ STORY</a>
-          </div>
-          <div>
-            <a href="#">
-              <img src="./img/arrow.svg" alt="" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div id="sunset-story" class="story">
-        <div class="story-description">
-          <h3 class="story-title">Sunset Cityscapes</h3>
-          <p class="story-author">by Benjamin Cruz</p>
-        </div>
-        <div class="gray-line"></div>
-        <div class="read-story-link">
-          <div>
-            <a class="story-link" href="#">READ STORY</a>
-          </div>
-          <div>
-            <a href="#">
-              <img src="./img/arrow.svg" alt="" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div id="voyage-story" class="story">
-        <div class="story-description">
-          <h3 class="story-title">18 Days Voyage</h3>
-          <p class="story-author">by Alexei Borodin</p>
-        </div>
-        <div class="gray-line"></div>
-        <div class="read-story-link">
-          <div>
-            <a class="story-link" href="#">READ STORY</a>
-          </div>
-          <div>
-            <a href="#">
-              <img src="./img/arrow.svg" alt="" />
-            </a>
-          </div>
-        </div>
-      </div>
-      <div id="architect-story" class="story">
-        <div class="story-description">
-          <h3 class="story-title">Architecturals</h3>
-          <p class="story-author">by Samantha Brooke</p>
-        </div>
-        <div class="gray-line"></div>
-        <div class="read-story-link">
-          <div>
-            <a class="story-link" href="#">READ STORY</a>
-          </div>
-          <div>
-            <a href="#">
-              <img src="./img/arrow.svg" alt="" />
-            </a>
-          </div>
-        </div>
-      </div>
+      <div class="picture-img"></div>
     </section>
     <section id="home-features">
       <div class="home-feature">
@@ -207,6 +93,42 @@
           <p>
             Embed Tweets, Facebook posts, Instagram media, Vimeo or YouTube
             videos, Google Maps, and more.
+          </p>
+        </div>
+      </div>
+      <div class="home-feature">
+        <div class="home-feature-img">
+          <img src="./img/custom-domain.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>Custom Domain</h3>
+          <p>
+            With Photosnap subscriptions you can host your stories on your own
+            domain. You can also remove our branding!
+          </p>
+        </div>
+      </div>
+      <div class="home-feature">
+        <div class="home-feature-img">
+          <img src="./img/boost-exposure.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>Boost Your Exposure</h3>
+          <p>
+            Users that viewed your story or gallery can easily get notifed of
+            new and featured stories with our built in mailing list.
+          </p>
+        </div>
+      </div>
+      <div class="home-feature">
+        <div class="home-feature-img">
+          <img src="./img/drag-drop.svg" alt="" />
+        </div>
+        <div class="home-feature-text">
+          <h3>Drag & Drop Image</h3>
+          <p>
+            Easily drag and drop your image and get beautiful shots everytime.
+            No over the top tooling to add friction to creating stories.
           </p>
         </div>
       </div>
