--- a/features.html
+++ b/features.html
@@ -133,6 +133,19 @@
         </div>
       </div>
     </section>
+    <section id="beta-showcase">
+      <div class="beta-showcase-text">
+        <h2 class="beta-showcase-heading">
+          We’re in beta. Get your invite today!
+        </h2>
+      </div>
+      <div class="get-an-invite-text-link-dark">
+        <a href="#"
+          >GET AN INVITE
+          <img class="arrow-img" src="./img/arrow.svg" alt="arrow" />
+        </a>
+      </div>
+    </section>
     <footer>
       <div class="footer-logo-socials-container">
         <ul class="social-links">
