--- a/pricing.html
+++ b/pricing.html
@@ -49,89 +49,15 @@
     <section id="create-and-share">
       <div class="text-dark">
         <div class="home-page-text">
-          <h2>FEATURES</h2>
+          <h2>PRICING</h2>
           <p>
-            We make sure all of our features are designed to be loved by every
-            aspiring and even professional photograpers who wanted to share
-            their stories.
+            Create a your stories, Photosnap is a platform for photographers and
+            visual storytellers. It’s the simple way to create and share your
+            photos.
           </p>
         </div>
       </div>
-      <div class="picture-img"></div>
-    </section>
-    <section id="home-features">
-      <div class="home-feature">
-        <div class="home-feature-img">
-          <img src="./img/responsive.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>100% Responsive</h3>
-          <p>
-            No matter which the device you’re on, our site is fully responsive
-            and stories look beautiful on any screen.
-          </p>
-        </div>
-      </div>
-      <div class="home-feature middle-home-feature">
-        <div class="home-feature-img">
-          <img src="./img/no-limit.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>No Photo Upload Limit</h3>
-          <p>
-            Our tool has no limits on uploads or bandwidth. Freely upload in
-            bulk and share all of your stories in one go.
-          </p>
-        </div>
-      </div>
-      <div class="home-feature">
-        <div class="home-feature-img">
-          <img src="./img/embed.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>Available to Embed</h3>
-          <p>
-            Embed Tweets, Facebook posts, Instagram media, Vimeo or YouTube
-            videos, Google Maps, and more.
-          </p>
-        </div>
-      </div>
-      <div class="home-feature">
-        <div class="home-feature-img">
-          <img src="./img/custom-domain.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>Custom Domain</h3>
-          <p>
-            With Photosnap subscriptions you can host your stories on your own
-            domain. You can also remove our branding!
-          </p>
-        </div>
-      </div>
-      <div class="home-feature">
-        <div class="home-feature-img">
-          <img src="./img/boost-exposure.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>Boost Your Exposure</h3>
-          <p>
-            Users that viewed your story or gallery can easily get notifed of
-            new and featured stories with our built in mailing list.
-          </p>
-        </div>
-      </div>
-      <div class="home-feature">
-        <div class="home-feature-img">
-          <img src="./img/drag-drop.svg" alt="" />
-        </div>
-        <div class="home-feature-text">
-          <h3>Drag & Drop Image</h3>
-          <p>
-            Easily drag and drop your image and get beautiful shots everytime.
-            No over the top tooling to add friction to creating stories.
-          </p>
-        </div>
-      </div>
+      <div class="photographer-img"></div>
     </section>
     <section id="beta-showcase">
       <div class="beta-showcase-text">
