--- a/stories.html
+++ b/stories.html
@@ -35,7 +35,7 @@
           <ul class="nav-menu">
             <li><a href="stories.html">STORIES</a></li>
             <li><a href="features.html">FEATURES</a></li>
-            <li><a href="#">PRICING</a></li>
+            <li><a href="pricing.html">PRICING</a></li>
             <li><a class="mobile-nav-btn" href="#">GET AN INVITE</a></li>
           </ul>
           <div class="nav-cta-btn">
@@ -389,7 +389,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="stories.html">STORIES</a></li>
         <li><a href="features.html">FEATURES</a></li>
-        <li><a href="#">PRICING</a></li>
+        <li><a href="pricing.html">PRICING</a></li>
       </ul>
       <div class="footer-invite-footer-copyright">
         <div class="get-an-invite-container">
