pricing styles desktop and mobile complete

--- a/pricing.html
+++ b/pricing.html
@@ -59,6 +59,54 @@
       </div>
       <div class="photographer-img"></div>
     </section>
+    <section id="monthly-yearly-pricing">
+      <div class="toggle-switch-container">
+        <p>Monthly</p>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+        <p>Yearly</p>
+      </div>
+      <div class="pricing-boxes">
+        <div class="price-box">
+          <div class="price-box-text">
+            <p class="price-box-title">Basic</p>
+            <p class="price-box-description">
+              Includes basic usage of our platform. Recommended for new and
+              aspiring photographers.
+            </p>
+            <p class="price-box-price">$19.00</p>
+            <small>Per month</small>
+          </div>
+          <div class="price-box-btn-dark">PICK PLAN</div>
+        </div>
+        <div class="price-box dark">
+          <div class="price-box-text">
+            <p class="price-box-title">Pro</p>
+            <p class="price-box-description">
+              More advanced features available. Recommended for photography
+              veterans and professionals.
+            </p>
+            <p class="price-box-price">$39.00</p>
+            <small>Per month</small>
+          </div>
+          <div class="price-box-btn-light">PICK PLAN</div>
+        </div>
+        <div class="price-box">
+          <div class="price-box-text">
+            <p class="price-box-title">Business</p>
+            <p class="price-box-description">
+              Additional features available such as more detailed metrics.
+              Recommended for business owners.
+            </p>
+            <p class="price-box-price">$99.00</p>
+            <small>Per month</small>
+          </div>
+          <div class="price-box-btn-dark">PICK PLAN</div>
+        </div>
+      </div>
+    </section>
     <section id="beta-showcase">
       <div class="beta-showcase-text">
         <h2 class="beta-showcase-heading">
