price toggle complete

--- a/pricing.html
+++ b/pricing.html
@@ -77,7 +77,9 @@
               aspiring photographers.
             </p>
             <p class="price-box-price">$19.00</p>
-            <small>Per month</small>
+            <p class="price-box-price-year">$200.00</p>
+            <p class="price-per-month">Per month</p>
+            <p class="price-per-year">Per year</p>
           </div>
           <div class="price-box-btn-dark">PICK PLAN</div>
         </div>
@@ -89,7 +91,9 @@
               veterans and professionals.
             </p>
             <p class="price-box-price">$39.00</p>
-            <small>Per month</small>
+            <p class="price-box-price-year">$400.00</p>
+            <p class="price-per-month">Per month</p>
+            <p class="price-per-year">Per year</p>
           </div>
           <div class="price-box-btn-light">PICK PLAN</div>
         </div>
@@ -101,7 +105,9 @@
               Recommended for business owners.
             </p>
             <p class="price-box-price">$99.00</p>
-            <small>Per month</small>
+            <p class="price-box-price-year">$1000.00</p>
+            <p class="price-per-month">Per month</p>
+            <p class="price-per-year">Per year</p>
           </div>
           <div class="price-box-btn-dark">PICK PLAN</div>
         </div>
