table desktop complete

--- a/pricing.html
+++ b/pricing.html
@@ -113,6 +113,68 @@
         </div>
       </div>
     </section>
+
+    <section id="compare">
+      <h2>COMPARE</h2>
+      <table>
+        <tr class="table-headings">
+          <th>THE FEATURES</th>
+          <th>BASIC</th>
+          <th>PRO</th>
+          <th>BUSINESS</th>
+        </tr>
+
+        <tr>
+          <td>UNLIMITED STORY POSTING</td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>UNLIMITED PHOTO UPLOAD</td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>EMBEDDING CUSTOM CONTENT</td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>CUSTOMIZE METADATA</td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>ADVANCED METRICS</td>
+          <td></td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>PHOTO DOWNLOADS</td>
+          <td></td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>SEARCH ENGINE INDEXING</td>
+          <td></td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+        <tr>
+          <td>CUSTOM ANALYTICS</td>
+          <td></td>
+          <td></td>
+          <td><img src="./img/check.svg" alt="check" /></td>
+        </tr>
+      </table>
+    </section>
+
     <section id="beta-showcase">
       <div class="beta-showcase-text">
         <h2 class="beta-showcase-heading">
