mobile features test

--- a/pricing.html
+++ b/pricing.html
@@ -116,7 +116,7 @@
 
     <section id="compare">
       <h2>COMPARE</h2>
-      <table>
+      <table class="desktop-table">
         <tr class="table-headings">
           <th>THE FEATURES</th>
           <th>BASIC</th>
@@ -173,6 +173,151 @@
           <td><img src="./img/check.svg" alt="check" /></td>
         </tr>
       </table>
+
+      <h3 class="mobile-table-heading">THE FEATURES</h3>
+
+      <div class="mobile-features">
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">UNLIMITED STORY POSTING</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">UNLIMITED PHOTO UPLOAD</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">EMBEDDING CUSTOM CONTENT</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">CUSTOMIZE METADATA</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">ADVANCED METRICS</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">PHOTO DOWNLOADS</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">SEARCH ENGINE INDEXING</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+        <div class="mobile-features-container">
+          <h4 class="mobile-feature-heading">CUSTOM ANALYTICS</h4>
+          <div class="mobile-features-titles">
+            <p>BASIC</p>
+            <p>PRO</p>
+            <p>BUSINESS</p>
+          </div>
+          <div class="mobile-features-checks">
+            <div class="check"></div>
+            <div class="check"></div>
+            <div class="check">
+              <img src="./img/check.svg" alt="check mark" />
+            </div>
+          </div>
+        </div>
+        <div class="mobile-features-line"></div>
+      </div>
     </section>
 
     <section id="beta-showcase">
